# CyclicDiffusion-MT

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
cyclicdiffusion_mt/: __init__.py  sample.py  train.py
cyclicdiffusion_mt/config/: __init__.py  config.yaml  data_config.py  model_config.py  train_config.py
cyclicdiffusion_mt/data/: dataset.py  geometry.py  synthetic.py  transforms.py
cyclicdiffusion_mt/eval/: __init__.py  metrics.py
cyclicdiffusion_mt/losses/: __init__.py  affinity_loss.py  cyclo_loss.py  geometry_loss.py  torsion_loss.py  type_loss.py
cyclicdiffusion_mt/model/: cross_attention.py  denoiser.py  diffusion.py  nerf.py  target_encoder.py
cyclicdiffusion_mt/utils/: constants.py  protein_utils.py
docs/superpowers/plans/: 2026-07-15-cyclicdiffusion-mt-implementation.md  2026-07-15-training-integration.md
docs/superpowers/specs/: 2026-07-14-cyclicdiffusion-mt-design.md
scripts/: preprocess_cpcore.py
tests/: test_config.py  test_constants.py  test_cross_attention.py  test_data.py  test_denoiser.py  test_diffusion.py  test_geometry.py  test_losses.py  test_metrics.py  test_nerf.py  test_preprocess_integration.py  test_protein_utils.py  test_sample.py  test_synthetic.py  test_target_encoder.py  test_train.py
